--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="head">
 
                 <div class="logo_black">
-                    <img src="./Images/logo_black.jpg" alt="">
+                    <img src="./Images/logo_color.jpg" alt="">
                     <h1>PrixBah</h1>
                 </div>
                 <!-- **** -->
@@ -56,7 +56,7 @@
                 <a href="">Catalogue</a>
                 <a href="">Question fréquentes</a>
                 <a href="">Connexion</a>
-                <a href="#icons">*2</a>
+                <i class="fa-solid fa-cart-circle-check">shop</i>
             </div>
 
         </nav>    
