--- a/index.html
+++ b/index.html
@@ -63,5 +63,29 @@
 
     </header>
 
+    <section class="choose">
+
+        <h4>Avoir le choix des Prix Marché</h4>
+
+    <div class="choose_select">
+
+        <div class="choose_img">
+            <img src="./Images/jeux_tracteur_ferme.png" alt="">
+            <p>je choisi</p>
+        </div>
+
+        <div class="choose_img">
+            <img src="./Images/jeux_lego.png" alt="">
+            <p>je choisi</p>
+        </div>
+
+        <div class="choose_img">
+            <img src="./Images/bricolage_jardinage_gant_de_protection.png" alt="">
+            <p>je choisi</p>
+        </div>
+        
+    </div>
+</section>
+
 </body>
 </html>
