--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <main class="container-main">
 
         <div class="bestsellers">
-            <p>Meilleurs ventes</p>
+            <p>Meilleures ventes</p>
         </div>
         
             <section class="container-scroll">
@@ -229,17 +229,17 @@
 
             <div class="choose_img">
                 <img src="./Images/jeux_tracteur_ferme.png" alt="">
-                <p>je choisi</p>
+                <p>je choisis</p>
             </div>
 
             <div class="choose_img">
                 <img src="./Images/jeux_lego.png" alt="">
-                <p>je choisi</p>
+                <p>je choisis</p>
             </div>
 
             <div class="choose_img">
                 <img src="./Images/bricolage_jardinage_gant_de_protection.png" alt="">
-                <p>je choisi</p>
+                <p>je choisis</p>
             </div>
             
         </div>
