--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <section class="container-scroll">
                 <div class="box-shadow">
                     <div class="box-img">
-                        <img class="img-all" src="/Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
+                        <img class="img-all" src="./Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
                         <div class="text-box">
                             <p class="ham">Marteau</p>
                             <div class="price-stock">
@@ -87,7 +87,7 @@
 
                 <div class="box-shadow">
                     <div class="box-img">
-                        <img class="img-all" src="/Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
+                        <img class="img-all" src="./Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
                         <div class="text-box">
                             <p class="ham">Marteau</p>
                             <div class="price-stock">
@@ -100,7 +100,7 @@
                 
                 <div class="box-shadow">
                     <div class="box-img">
-                        <img class="img-all" src="/Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
+                        <img class="img-all" src="./Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
                         <div class="text-box">
                             <p class="ham">Marteau</p>
                             <div class="price-stock">
@@ -113,7 +113,7 @@
 
                 <div class="box-shadow">
                     <div class="box-img">
-                        <img class="img-all" src="/Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
+                        <img class="img-all" src="./Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
                         <div class="text-box">
                             <p class="ham">Marteau</p>
                             <div class="price-stock">
