--- a/index.html
+++ b/index.html
@@ -245,7 +245,22 @@
         </div>
         </section>
     </main>
-
+    <footer>
+        
+        <div class="footer_links">
+            <ul>
+                <li>Accueil</li>
+                <li>Catalogue</li>
+                <li>Questions fréquentes</li>
+                <li>Première visite</li>
+                <li>Livraison retrait</li>
+                <li>Contact</li>
+            </ul>
+        </div>
+        <div class="legal">
+            <p>Mentions légales | Conditions générales d'utilisation et de ventes</p>
+        </div>
+    </footer>
     
 </body>
 </html>
