modify header - main scroll

--- a/index.html
+++ b/index.html
@@ -64,13 +64,20 @@
 
     </header>
 
+    
+
     <main class="container-main">
+
+        <div class="arrow-left"></div>
+        <div class="arrow-right"></div>
 
         <div class="bestsellers">
             <p>Meilleurs ventes</p>
         </div>
         
             <section class="container-scroll">
+
+
                 <div class="box-shadow">
                     <div class="box-img">
                         <img class="img-all" src="/Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
