start products page

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
                 <div class="box-shadow">
                     <div class="box-img">
-                        <img class="img-all" src="/Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
+                        <img class="img-all" src="./Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
                         <div class="text-box">
                             <p class="ham">Marteau</p>
                             <div class="price-stock">
@@ -94,7 +94,7 @@
 
                 <div class="box-shadow">
                     <div class="box-img">
-                        <img class="img-all" src="/Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
+                        <img class="img-all" src="./Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
                         <div class="text-box">
                             <p class="ham">Marteau</p>
                             <div class="price-stock">
@@ -107,7 +107,7 @@
                 
                 <div class="box-shadow">
                     <div class="box-img">
-                        <img class="img-all" src="/Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
+                        <img class="img-all" src="./Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
                         <div class="text-box">
                             <p class="ham">Marteau</p>
                             <div class="price-stock">
@@ -120,7 +120,7 @@
 
                 <div class="box-shadow">
                     <div class="box-img">
-                        <img class="img-all" src="/Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
+                        <img class="img-all" src="./Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
                         <div class="text-box">
                             <p class="ham">Marteau</p>
                             <div class="price-stock">
