--- a/products.html
+++ b/products.html
@@ -63,5 +63,33 @@
 
     </header>
 
+
+    <section class="container-products">
+
+        <div class="display">
+            <h5>Affichage</h5>
+        </div>
+    
+        <div class="trie" >
+            <p>Trier les résultas</p>
+        </div>
+
+        <div>
+            <div class="box-shadow-products">
+                <div class="box-img">
+                    <img class="img-all" src="./Images/andrew-george-YU2mCvXR0wA-unsplash (1).jpg">
+                    <div class="text-box">
+                        <p class="ham">Marteau</p>
+                        <div class="price-stock-Products">
+                            <p> 1€</p>
+                            <p>En stock </p>
+                        </div>
+                    </div>  
+                </div>
+            </div>
+        </div>
+    </section>
+    
+
 </body>
 </html>
