--- a/product.html
+++ b/product.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PrixBah</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap" rel="stylesheet">
@@ -63,6 +64,102 @@
 
     </header>
 
+    <main class="main_box">
+        <section class="section_box">
+        <div class="main_img">
+            <img src="./Images/marteau_product.jpg" alt="">
+
+        </div>
+
+        <div class="main_section_bloc">
+        <div class="main_price">    
+            <h3>Marteau</h3>
+            <h4>1 €</h4>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. </p>
+        </div>
+        <div class="value_main">
+
+            <div class="main_value">
+                <input type="button" value="-">
+                <p>2</p>
+                <input type="button" value="+">
+            </div>
+            <div class="main_value_button">
+                <input type="button" value="Ajouter au pannier">
+                <i class="fa-solid fa-heart"></i>
+            </div>
+        </div>
+        </div>
+        </section>
+        <div class="main_box_img">
+            <img src="./Images/marteau_product.jpg" alt="">
+            <img src="./Images/marteau_product.jpg" alt="">
+        </div>
+        
+    </main>
+
+
+
+    <footer>
+        <div class="footer_info">
+            <div class="footer_container">
+
+                <div class="footer_icons">
+                    <i  class="fa-solid fa-magnifying-glass-dollar"></i>
+                </div>
+
+                <div class="footer_box">
+                    <h4>Articles à petit prix</h4>
+                    <p>La majorité des produits sont à 1 euro</p>
+                </div>
+
+                <div class="footer_icons">
+                    <i class="fa-solid fa-magnifying-glass-dollar"></i>
+                </div>
+
+                <div class="footer_box">
+                    <h4>Achats sans soucis</h4>
+                    <p>Chaque commande est fournis mains à mains</p>
+                </div>
+
+                <div class="footer_icons">
+                    <i class="fa-solid fa-credit-card"></i>
+                </div>
+
+                <div class="footer_box">
+                    <h4>Paiement sécurisé</h4>
+                    <p>Payez sans vous souciez lors du retrait</p>
+                </div>
+
+                <div class="footer_icons">
+                    <i class="fa-solid fa-truck-arrow-right"></i>
+                </div>
+
+                <div class="footer_box">
+                    <h4>Livraison Lilloise</h4>
+                    <p>Ce que vous voulez, préparé pour les lillois et les alentours</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer_href">
+            <div class="footer_contain">
+                <a href="">Accueil</a> 
+                <a href="">Catalogue</a> 
+                <a href="">Questions fréquentes</a> 
+            </div>
+
+            <div class="footer_contain">
+                <a href="">Première visite</a> 
+                <a href="">Livraison retrait</a> 
+                <a href="">Contact</a> 
+            </div>
+        </div>
+
+        <div class="legal">
+            <p>Mentions légales | Conditions générales d'utilisation et de ventes</p>
+        </div>
+
+    </footer>
     
 </body>
 </html>
