--- a/products.html
+++ b/products.html
@@ -63,5 +63,66 @@
 
     </header>
 
+
+    <footer>
+        <div class="footer_info">
+            <div class="footer_container">
+
+                <div class="footer_icons">
+                    <i  class="fa-solid fa-magnifying-glass-dollar"></i>
+                </div>
+
+                <div class="footer_box">
+                    <h4>Articles à petit prix</h4>
+                    <p>La majorité des produits sont à 1 euro</p>
+                </div>
+
+                <div class="footer_icons">
+                    <i class="fa-solid fa-magnifying-glass-dollar"></i>
+                </div>
+
+                <div class="footer_box">
+                    <h4>Achats sans soucis</h4>
+                    <p>Chaque commande est fournis mains à mains</p>
+                </div>
+
+                <div class="footer_icons">
+                    <i class="fa-solid fa-credit-card"></i>
+                </div>
+
+                <div class="footer_box">
+                    <h4>Paiement sécurisé</h4>
+                    <p>Payez sans vous souciez lors du retrait</p>
+                </div>
+
+                <div class="footer_icons">
+                    <i class="fa-solid fa-truck-arrow-right"></i>
+                </div>
+
+                <div class="footer_box">
+                    <h4>Livraison Lilloise</h4>
+                    <p>Ce que vous voulez, préparé pour les lillois et les alentours</p>
+                </div>
+            </div>
+        </div>
+        <div class="footer_href">
+            <div class="footer_contain">
+                <a href="">Accueil</a> 
+                <a href="">Catalogue</a> 
+                <a href="">Questions fréquentes</a> 
+            </div>
+
+            <div class="footer_contain">
+                <a href="">Première visite</a> 
+                <a href="">Livraison retrait</a> 
+                <a href="">Contact</a> 
+            </div>
+        </div>
+
+        <div class="legal">
+            <p>Mentions légales | Conditions générales d'utilisation et de ventes</p>
+        </div>
+
+    </footer>
 </body>
 </html>
