--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             </div>
             <!-- **** -->
             <div class="nav_bar">
-                <a href="">Catalogue</a>
-                <a href="">Question fréquentes</a>
+                <a href="./products.html">Catalogue</a>
+                <a href="./product.html">Article</a>
                 <a href="">Connexion</a>
                 <i class="fa-solid fa-basket-shopping" style="color: white;"></i>
             </div>
