--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
 
                 <div class="logo_black">
                     <img src="./Images/logo_color.jpg" alt="">
-                    <h1>PrixBah</h1>
+                    <a href="./index.html">PrixBah</a>
                 </div>
                 <!-- **** -->
                 <div class="info_1">
